--- a/pom.xml
+++ b/pom.xml
@@ -150,5 +150,12 @@
             </plugin>
         </plugins>
     </build>
+    
+    <developers>
+    	<developer>
+    		<name>Sheila Viana</name>
+    		<email>sheila.shviana@gmail.com</email>
+    	</developer>
+    </developers>
 
 </project>
